--- a/src/app.html
+++ b/src/app.html
@@ -1,8 +1,19 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<!-- Google Fonts: Playfair Display, Cormorant Garamond, Montserrat -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400&family=Montserrat:wght@200;300;400;500;600;700;800&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400&display=swap" rel="stylesheet">
+
+		<!-- SEO мета-теги -->
+		<meta name="description" content="ANG Crown — персональный самолёт по цене автомобиля премиум-класса. Официальный дистрибьютор на Кипре. Crown Aero Group.">
+		<meta property="og:title" content="ANG Crown · Малая авиация на Кипре">
+		<meta property="og:description" content="Пятиместный самолёт нового поколения. 370 км/ч. Расход 8–10 л/100 км. Баллистический парашют.">
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
